--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
 *.class
 
+# Maven
+log/
+target/
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
