--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <jacoco.version>0.7.8</jacoco.version>
         <animal-sniffer.version>1.15</animal-sniffer.version>
         <proguard.version>5.3.2</proguard.version>
+        <asm.version>5.2</asm.version>
     </properties>
 
     <build>
@@ -133,6 +134,16 @@
                     <excludePackageNames>_shaded.*</excludePackageNames>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <jdk.internal.lambda.dumpProxyClasses>${user.home}/dumpedlambdas</jdk.internal.lambda.dumpProxyClasses>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -141,6 +152,12 @@
             <groupId>net.sourceforge.streamsupport</groupId>
             <artifactId>streamsupport</artifactId>
             <version>${streamsupport.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-tree</artifactId>
+            <version>${asm.version}</version>
         </dependency>
 
         <dependency>
