[travis] build & test using different profiles

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,12 @@ jdk:
 cache:
   directories:
     - $HOME/.m2
+
+os:
+  - linux
+
+env:
+  matrix:
+    - PHASE='-Pjacoco'
+    - PHASE='-Pretrolambda'
+    - PHASE='-Pretrolambda -Pjacoco'
