--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <retrolambda.target>1.6</retrolambda.target>
+        <jdkapicheck.signature>java16</jdkapicheck.signature>
     </properties>
 
     <developers>
@@ -116,32 +118,6 @@
 
     <profiles>
         <profile>
-            <id>retrolambda</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>net.orfjackal.retrolambda</groupId>
-                        <artifactId>retrolambda-maven-plugin</artifactId>
-                        <version>2.3.0</version>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>process-main</goal>
-                                    <goal>process-test</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <target>1.7</target>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>jacoco</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
@@ -173,6 +149,32 @@
                                 </configuration>
                             </execution>
                         </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>retrolambda</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>net.orfjackal.retrolambda</groupId>
+                        <artifactId>retrolambda-maven-plugin</artifactId>
+                        <version>2.3.0</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>process-main</goal>
+                                    <goal>process-test</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <target>${retrolambda.target}</target>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
