[build] retrolambda should be forked and default methods should be backported.

--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,8 @@
                             </execution>
                         </executions>
                         <configuration>
+                            <fork>true</fork>
+                            <defaultMethods>true</defaultMethods>
                             <target>${retrolambda.target}</target>
                         </configuration>
                     </plugin>
