--- a/pom.xml
+++ b/pom.xml
@@ -42,13 +42,16 @@
         <developerConnection>scm:git:https://github.com/csoroiu/lambdamatchers.git</developerConnection>
     </scm>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <retrolambda.target>1.6</retrolambda.target>
-        <jdkapicheck.signature>java16</jdkapicheck.signature>
-    </properties>
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/csoroiu/lambdamatchers/issues</url>
+    </issueManagement>
+
+    <ciManagement>
+        <system>Travis CI</system>
+        <url>https://travis-ci.org/csoroiu/lambdamatchers</url>
+        <notifiers/>
+    </ciManagement>
 
     <developers>
         <developer>
@@ -57,6 +60,14 @@
             <organization>Derbederos</organization>
         </developer>
     </developers>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <retrolambda.target>1.6</retrolambda.target>
+        <jdkapicheck.signature>java16</jdkapicheck.signature>
+    </properties>
 
     <build>
         <plugins>
