[cosmetic] ignore JRE checks on classes we know they should not be used with incorrect version of java.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,12 @@ env:
     - PROFILES='-Pjacoco'
     - PROFILES='-Pretrolambda'
     - PROFILES='-Pretrolambda -Pjacoco'
+    - PROFILES='-Pjdkapicheck -DskipTests=true'
     - PROFILES='-Pretrolambda -Pjdkapicheck -DskipTests=true'
 
 matrix:
   allow_failures:
+    - env: PROFILES='-Pjdkapicheck -DskipTests=true'
     - env: PROFILES='-Pretrolambda -Pjdkapicheck -DskipTests=true'
 
 install:
