--- a/pom.xml
+++ b/pom.xml
@@ -102,15 +102,24 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>animal-sniffer-annotations</artifactId>
+            <version>1.15</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
             <version>1.3</version>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>1.3</version>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -206,9 +215,6 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <annotations>
-                                <annotation>ro.derbederos.hamcrest.internal.IgnoreJRERequirement</annotation>
-                            </annotations>
                             <signature>
                                 <groupId>org.codehaus.mojo.signature</groupId>
                                 <artifactId>${jdkapicheck.signature}</artifactId>
