--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>1.3</version>
-            <optional>true</optional>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
