--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <!-- this seems to be an issue with javadoc which needs User-Agent set -->
+                    <additionalJOption>-J-Dhttp.agent=javadoc</additionalJOption>
+                    <failOnError>false</failOnError>
+                    <links>
+                        <link>http://static.javadoc.io/org.hamcrest/hamcrest-all/1.3</link>
+                        <link>http://static.javadoc.io/net.sourceforge.streamsupport/streamsupport/1.5.3</link>
+                    </links>
                     <excludePackageNames>_shaded.*</excludePackageNames>
                 </configuration>
             </plugin>
@@ -105,13 +112,6 @@
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>animal-sniffer-annotations</artifactId>
-            <version>1.15</version>
-            <optional>true</optional>
-        </dependency>
-
         <dependency>
             <groupId>net.sourceforge.streamsupport</groupId>
             <artifactId>streamsupport</artifactId>
@@ -122,14 +122,14 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
             <version>1.3</version>
-            <optional>true</optional>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>1.3</version>
-            <scope>test</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -225,6 +225,9 @@
                             </execution>
                         </executions>
                         <configuration>
+                            <annotations>
+                                <annotation>ro.derbederos.hamcrest.Java8API</annotation>
+                            </annotations>
                             <ignores>
                                 <ignore>sun.misc.Unsafe</ignore>
                             </ignores>
