--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,15 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <retrolambda.target>1.5</retrolambda.target>
-        <jdkapicheck.signature>java15</jdkapicheck.signature>
-        <tool.proguard.version>5.3.2</tool.proguard.version>
+        <animal-sniffer.signature>java15</animal-sniffer.signature>
+
+        <streamsupport.version>1.5.3</streamsupport.version>
+        <hamcrest.version>1.3</hamcrest.version>
+        <retrolambda.version>2.4.0</retrolambda.version>
+        <junit.version>4.12</junit.version>
+        <jacoco.version>0.7.8</jacoco.version>
+        <animal-sniffer.version>1.15</animal-sniffer.version>
+        <proguard.version>5.3.2</proguard.version>
     </properties>
 
     <build>
@@ -102,8 +109,8 @@
                     <additionalJOption>-J-Dhttp.agent=javadoc</additionalJOption>
                     <failOnError>false</failOnError>
                     <links>
-                        <link>http://static.javadoc.io/org.hamcrest/hamcrest-all/1.3</link>
-                        <link>http://static.javadoc.io/net.sourceforge.streamsupport/streamsupport/1.5.3</link>
+                        <link>http://static.javadoc.io/org.hamcrest/hamcrest-all/${hamcrest.version}</link>
+                        <link>http://static.javadoc.io/net.sourceforge.streamsupport/streamsupport/${streamsupport.version}</link>
                     </links>
                     <excludePackageNames>_shaded.*</excludePackageNames>
                 </configuration>
@@ -115,27 +122,27 @@
         <dependency>
             <groupId>net.sourceforge.streamsupport</groupId>
             <artifactId>streamsupport</artifactId>
-            <version>1.5.3</version>
+            <version>${streamsupport.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
-            <version>1.3</version>
+            <version>${hamcrest.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
-            <version>1.3</version>
+            <version>${hamcrest.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -151,7 +158,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.7.8</version>
+                        <version>${jacoco.version}</version>
                         <executions>
                             <execution>
                                 <id>jacoco-initialize</id>
@@ -187,7 +194,7 @@
                     <plugin>
                         <groupId>net.orfjackal.retrolambda</groupId>
                         <artifactId>retrolambda-maven-plugin</artifactId>
-                        <version>2.4.0</version>
+                        <version>${retrolambda.version}</version>
                         <executions>
                             <execution>
                                 <goals>
@@ -197,6 +204,7 @@
                             </execution>
                         </executions>
                         <configuration>
+                            <quiet>true</quiet>
                             <fork>true</fork>
                             <defaultMethods>true</defaultMethods>
                             <target>${retrolambda.target}</target>
@@ -215,7 +223,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>animal-sniffer-maven-plugin</artifactId>
-                        <version>1.15</version>
+                        <version>${animal-sniffer.version}</version>
                         <executions>
                             <execution>
                                 <phase>test</phase>
@@ -233,7 +241,7 @@
                             </ignores>
                             <signature>
                                 <groupId>org.codehaus.mojo.signature</groupId>
-                                <artifactId>${jdkapicheck.signature}</artifactId>
+                                <artifactId>${animal-sniffer.signature}</artifactId>
                                 <version>1.0</version>
                             </signature>
                         </configuration>
@@ -260,7 +268,7 @@
                                     <goal>proguard</goal>
                                 </goals>
                                 <configuration>
-                                    <proguardVersion>${tool.proguard.version}</proguardVersion>
+                                    <proguardVersion>${proguard.version}</proguardVersion>
                                     <proguardInclude>${basedir}/proguard-project.txt</proguardInclude>
                                     <obfuscate>true</obfuscate>
                                     <attach>true</attach>
@@ -275,7 +283,7 @@
                             <dependency>
                                 <groupId>net.sf.proguard</groupId>
                                 <artifactId>proguard-base</artifactId>
-                                <version>${tool.proguard.version}</version>
+                                <version>${proguard.version}</version>
                             </dependency>
                         </dependencies>
                     </plugin>
