--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.6.1</version>
                 <configuration>
                     <excludes>
                         <exclude>module-info.java</exclude>
                     </excludes>
+                    <compilerArgs>
+                        <compilerArg>-Xlint:all</compilerArg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
