[build] warnings and set deprecation flag to true for the compilation step

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
                     <compilerArgs>
                         <compilerArg>-Xlint:all</compilerArg>
                     </compilerArgs>
+                    <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
             <plugin>
