--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 sudo: false
-
+dist: trusty
 language: java
 
+addons:
+  apt:
+    packages:
+      - oracle-java9-installer
+
 jdk:
-  - oraclejdk8
+  - oraclejdk9
 
 cache:
   directories:
