--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <packaging>jar</packaging>
 
     <name>LambdaMatchers</name>
-    <description>Java 8 hamcrest matchers and utility functions that use them.</description>
+    <description>Java 8+ hamcrest matchers and utility functions that use them.</description>
     <url>https://github.com/csoroiu/lambdamatchers</url>
 
     <licenses>
