--- a/pom.xml
+++ b/pom.xml
@@ -124,32 +124,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadoc</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <source>1.8</source>
-                    <sourceFileExcludes>
-                        <sourceFileExclude>module-info.java</sourceFileExclude>
-                    </sourceFileExcludes>
-                    <!-- this seems to be an issue with javadoc which needs User-Agent set -->
-                    <additionalJOption>-J-Dhttp.agent=javadoc</additionalJOption>
-                    <failOnError>false</failOnError>
-                    <links>
-                        <link>http://static.javadoc.io/org.hamcrest/hamcrest-all/${hamcrest.version}</link>
-                    </links>
-                    <excludePackageNames>_shaded.*</excludePackageNames>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
@@ -170,6 +144,42 @@
     </dependencies>
 
     <profiles>
+        <profile>
+            <id>javadoc</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.10.4</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadoc</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <source>1.8</source>
+                            <sourceFileExcludes>
+                                <sourceFileExclude>module-info.java</sourceFileExclude>
+                            </sourceFileExcludes>
+                            <!-- this seems to be an issue with javadoc which needs User-Agent set -->
+                            <additionalJOption>-J-Dhttp.agent=javadoc</additionalJOption>
+                            <failOnError>false</failOnError>
+                            <links>
+                                <link>http://static.javadoc.io/org.hamcrest/hamcrest-all/${hamcrest.version}</link>
+                            </links>
+                            <excludePackageNames>_shaded.*</excludePackageNames>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>jacoco</id>
             <activation>
