--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: false
-dist: trusty
 language: java
+
+addons:
+  apt:
+    packages:
+      - oracle-java9-installer
 
 jdk:
   - oraclejdk9
