--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ sudo: false
 dist: trusty
 language: java
 
+addons:
+  apt:
+    packages:
+      - oracle-java9-installer
+
 jdk:
   - oraclejdk9
 
