--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~ Copyright (c) 2016-2017 Claudiu Soroiu
   ~
@@ -75,7 +76,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.7.0</version>
                 <executions>
                     <execution>
                         <id>default-compile</id>
@@ -127,14 +128,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>commons-lang</groupId>
-                        <artifactId>commons-lang</artifactId>
-                        <version>2.6</version>
-                    </dependency>
-                </dependencies>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>attach-javadoc</id>
@@ -144,6 +138,9 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <jdkToolchain>
+                        <version>9</version>
+                    </jdkToolchain>
                     <source>1.8</source>
                     <sourceFileExcludes>
                         <sourceFileExclude>module-info.java</sourceFileExclude>
