fixed test runner with jdk 8, 11 and 17: 1. bump up maven to 3.8.6, maven wrapper to 3.1.1 2. bump up maven-compiler-plugin to 3.10.1 3. bump up maven-jar-plugin to 3.2.2 4. bump up maven-javadoc-plugin to 3.4.0 5. bump up maven-surefire-plugin to 3.0.0-M7

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 #arch: amd64
 #os: linux
-dist: focal
+dist: jammy
 language: java
 
 jdk:
-  - openjdk11
+  - openjdk17
 
 cache:
   directories:
